# TMscore_py

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
TMscore_py/: TMscore.cpp  __init__.py
TMscore_py/tests/: test_TMscore.py
proteins/: small_prot.mirror.xyz  small_prot.xyz
